1 fix webapp state.params 2 fix payment button disable when not ready or during checkout 3 promocode date check

--- a/webapp/src/ionicapp/www/templates/payment/pay.html
+++ b/webapp/src/ionicapp/www/templates/payment/pay.html
@@ -28,7 +28,7 @@
 
 
     
-    <button ng-click="pay()" class="button button-positive button-block">Pay</button>
+    <button ng-click="pay()" ng-disabled="loading" class="button button-positive button-block">Pay</button>
     
   </ion-content>
 </ion-view>
