--- a/webapp/src/ionicapp/www/templates/payment/subscription_change.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_change.html
@@ -1,6 +1,6 @@
 <ion-view title="{{data.ui.title}}" hide-back-button="true" nav-transition="none" id="pagesubchange" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
-    <button class="button button-icon icon ion-android-close" ng-click="back()"></button>
+    <button class="button button-icon icon ion-arrow-left-c" ng-click="back()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header" overflow-scroll="true">
     <div class="item card item-clam">
