--- a/webapp/src/ionicapp/www/templates/payment/promocode.html
+++ b/webapp/src/ionicapp/www/templates/payment/promocode.html
@@ -1,6 +1,6 @@
 <ion-view title="Promocode" hide-back-button="true" nav-transition="none" id="pagesubdetail" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
-    <button class="button button-icon icon ion-android-close" ng-click="back()"></button>
+    <button class="button button-icon icon ion-arrow-left-c" ng-click="back()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header" overflow-scroll="true">
     <ion-item class="item-button-right">
