--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -23,6 +23,11 @@
         <ion-item class="item-divider" id="menu-list-item-divider25"> </ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item11" ui-sref="menu.organizations({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-color-filter-outline"></i>Organizations</ion-item>
+        
+        
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.subscription({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-document-text"></i>Subscription</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.gateways({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
