--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -75,10 +75,14 @@
       <div id="temperature-markdown142" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;">Hardware</p>
       </div>
-      <ion-checkbox id="temperature-checkbox88" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
+      <ion-checkbox id="temperature-checkbox88" ng-model="data.attributes.hardware.enable">Send to IoT Modem</ion-checkbox>
+      <ion-checkbox id="temperature-checkbox101" ng-model="data.attributes.hardware.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
+      <label class="item item-input" id="temperature-input242">
+        <input type="text" placeholder="" ng-model="data.attributes.hardware.recipients">
+      </label>
       <label class="item item-select" id="temperature-select44">
         <span class="input-label">IoT Modem</span>
-        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
+        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices" ng-show="0"></select>
       </label>
     </form>
     <form id="temperature-form85" class="list" ng-show="data.attributes.mode!=2">
