--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -75,10 +75,14 @@
       <div id="humidity-markdown319" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;">Hardware</p>
       </div>
-      <ion-checkbox id="humidity-checkbox89" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
+      <ion-checkbox id="humidity-checkbox89" ng-model="data.attributes.hardware.enable">Send to IoT Modem</ion-checkbox>
+      <ion-checkbox id="humidity-checkbox102" ng-model="data.attributes.hardware.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
+      <label class="item item-input" id="humidity-input243">
+        <input type="text" placeholder="" ng-model="data.attributes.hardware.recipients">
+      </label>
       <label class="item item-select" id="humidity-select15">
         <span class="input-label">IoT Modem</span>
-        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
+        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices" ng-show="0"></select>
       </label>
     </form>
     <form id="humidity-form174" class="list" ng-show="data.attributes.mode!=2">
