--- a/webapp/src/ionicapp/www/templates/vOCGas.html
+++ b/webapp/src/ionicapp/www/templates/vOCGas.html
@@ -78,7 +78,7 @@
       <ion-checkbox id="vOCGas-checkbox93" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
       <label class="item item-select" id="vOCGas-select135">
         <span class="input-label">IoT Modem</span>
-        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
+        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices" ng-show="0"></select>
       </label>
     </form>
     <form id="vOCGas-form293" class="list" ng-show="data.attributes.mode!=2">
