--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -107,7 +107,7 @@
                   <div class="dashboard-item-action-column" style="width: 10%; height:20px">
                     <button class="button button-large button-icon icon ion-android-add-circle"
                             style="font-weight:600; padding-bottom: 100px;"
-                            ng-click="addNewChartGateway()"></button>
+                            ng-click="addChart(activeTab)"></button>
                   </div>
                 </div>
 
@@ -184,7 +184,36 @@
                 <!--TAB: SENSORS-->
                 <div  ng-show="activeTab==1">
                   <div style="width: 100%">
-                    <h4 style="text-align: center;">No sensors attributes selected to display</h4>
+                    <h4 style="text-align: center;"
+                        ng-show="sensorsView.length == 0">No sensors attributes selected to display</h4>
+                    <div class="item item-body"
+                       ng-show="sensorsView.length != 0"
+                       ng-repeat="chart in sensorsView">
+                      <div class="column">
+                        <div class="dashboard-item-main-column" style="width=80%">
+                          <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
+                          <p> Number: #<strong>{{chart.device.number}}</strong></p>
+                          <p> Gateway: {{chart.device.source}}</p>
+                          <p> Sensor class: {{chart.device.sensorClass}}
+                        </div>
+                        <div class="dashboard-item-action-column"  style="width=20%; float: right;">
+                            <button ng-click="deleteChartSensor(chart.id)"
+                                    style="font-weight:600; float: right;"
+                                    ng-style="{'color': dashboard.color}"
+                                    class="button button-positive button-large button-block button-clear icon-right ion-android-close">
+                            </button>
+                        </div>
+
+                        <canvas
+                                title="{{chart.device.sensorName}}"
+                                class="chart chart-line"
+                                chart-colors="chart.colors"
+                                chart-data="chart.dataset.data"
+                                chart-labels="chart.dataset.labels"
+                                chart-options="chart.options">
+                          </canvas>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
