--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -200,10 +200,13 @@
               <th style="width:8%">
                 <b>LDSU</b>
               </th>
+              <th style="width:7%">
+                <b>Number</b>
+              </th>
               <th style="width:17%">
                 <b>Class</b>
               </th>
-              <th style="width:35%">
+              <th style="width:28%">
                 <b>Configuration</b>
               </th>
             </tr>
@@ -226,9 +229,10 @@
               <td style="width:17%">{{ sensor.sensorname }}</td>
               <td style="width:13%">{{ sensor.devicename }}</td>
               <td style="width:7%">{{ sensor.type }}</td>
-              <td style="width:8%">{{ sensor.peripheral }}</td>
+              <td style="width:8%">{{ sensor.ldsu }}</td>
+              <td style="width:7%">{{ sensor.number }}</td>
               <td style="width:17%">{{ sensor.classes }}</td>
-              <td style="width:35%">{{ sensor.configuration }}</td>
+              <td style="width:28%">{{ sensor.configuration }}</td>
             </tr>
           </tbody>
         </table>
