--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -103,17 +103,23 @@
           <tbody>
             <tr>
               <th style="width:3%">&nbsp;</th>
-              <th style="width:25%">
+              <th style="width:15%">
                 <b>Device</b>
               </th>
-              <th style="width:20%">
+              <th style="width:9%">
                 <b>Version</b>
               </th>
-              <th style="width:20%">
+              <th style="width:12%">
                 <b>Group</b>
               </th>
-              <th style="width:32%">
+              <th style="width:15%">
                 <b>Location</b>
+              </th>
+              <th style="width:23%">
+                <b>Heartbeat</b>
+              </th>
+              <th style="width:23%">
+                <b>Alerts</b>
               </th>
             </tr>
           </tbody>
@@ -132,10 +138,12 @@
                 </div>
 
               </td>
-              <td style="width:25%">{{ device.devicename }}</td>
-              <td style="width:20%">{{ device.version }}</td>
-              <td style="width:20%">{{ device.group }}</td>
-              <td style="width:32%">{{ device.location }}</td>
+              <td style="width:15%">{{ device.devicename }}</td>
+              <td style="width:9%">{{ device.version }}</td>
+              <td style="width:12%">{{ device.group }}</td>
+              <td style="width:15%">{{ device.location }}</td>
+              <td style="width:23%">{{ device.online }}</td>
+              <td style="width:23%">{{ device.usage }}</td>
             </tr>
           </tbody>
         </table>
