Update payment feature to display points instead of currency for SMS

--- a/webapp/src/ionicapp/www/templates/payment/confirm_subscription_change.html
+++ b/webapp/src/ionicapp/www/templates/payment/confirm_subscription_change.html
@@ -22,7 +22,7 @@
           </label>
           <label class="item item-input item-divider">
             <span class="input-label">SMS</span>
-            <span class="input-label">{{data.plan.sms | currency}}</span>
+            <span class="input-label">{{data.plan.sms}} points</span>
           </label>
 
           <label class="item item-input item-divider">
