--- a/webapp/src/ionicapp/www/templates/payment/subscription_change.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_change.html
@@ -22,7 +22,7 @@
           </label>
           <label class="item item-input item-divider">
             <span class="input-label">SMS</span>
-            <span class="input-label">{{data.subscription.current.plan.sms | currency}}</span>
+            <span class="input-label">{{data.subscription.current.plan.sms}} points</span>
           </label>
           <label class="item item-input item-divider">
             <span class="input-label">Storage</span>
@@ -60,7 +60,7 @@
             </label>
             <label class="item item-input item-divider">
               <span class="input-label">SMS</span>
-              <span class="input-label">{{plan.sms | currency}}</span>
+              <span class="input-label">{{plan.sms}} points</span>
             </label>
             <label class="item item-input item-divider">
               <span class="input-label">Storage</span>
