--- a/webapp/src/ionicapp/www/templates/payment/subscription_detail.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_detail.html
@@ -21,7 +21,7 @@
       </label>
       <label class="item item-input item-divider">
         <span class="input-label">SMS</span>
-        <span class="input-label">{{data.subscription.current.sms | currency}} / {{data.subscription.current.plan.sms | currency}}</span>
+        <span class="input-label">{{data.subscription.current.sms}} / {{data.subscription.current.plan.sms}} points</span>
       </label>
       <hr/>
     <label class="item item-input">
