--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -204,14 +204,13 @@
                             </button>
                         </div>
 
-                        <canvas
-                                title="{{chart.device.sensorName}}"
+                        <canvas title="{{chart.device.sensorName}}"
                                 class="chart chart-line"
                                 chart-colors="chart.colors"
                                 chart-data="chart.dataset.data"
                                 chart-labels="chart.dataset.labels"
                                 chart-options="chart.options">
-                          </canvas>
+                        </canvas>
                       </div>
                     </div>
                   </div>
