--- a/webapp/src/ionicapp/www/templates/dashboards/compareChart.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/compareChart.html
@@ -22,6 +22,12 @@
         </div>
 
         <div ng-show="currentStep == 1">
+            <select style="float: left;"
+                    ng-model="comapareCharts.currentSelectTime"
+                    ng-change="updateMinuteUrl(comapareCharts.currentSelectTime.value)"
+                    ng-options="filter.name for filter in comapareCharts.selectedTimes">
+                      <option value="{{filter.value}}">{{filter.name}}</option>
+            </select>
             <canvas title="Compare"
                     class="chart chart-line"
                     chart-colors="comapareCharts.colors"
