Adding Select time and Realtime for compare chart

--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -219,7 +219,7 @@
                             </button>
                         </div>
 
-                        <canvas title="{{chart.device.sensorName}}"
+                        <canvas title="{{chart.device.name}}"
                                 class="chart chart-line"
                                 chart-colors="chart.colors"
                                 chart-data="chart.dataset.data"
