--- a/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
@@ -10,76 +10,86 @@
       <h4 style="text-align: center;">No gateways, you have to create new gateway</h4>
     </div>
     <div class="row" ng-show="devicesGroups.length != 0">
-          <div class="dashboard-list-column" style="width: 60%">
+          <div class="dashboard-list-column card" style="width: 60%; padding: 20px">
             <div ng-show="currentStep == 0">
-              <div class="dashboard-container dashboard-border dashboard-round-border">
+              <div>
                 <h2>Select Gateway</h2>
-                <div ng-repeat="group in devicesGroups">
-                    <h3>{{group.groupname}}</h3>
-                    <div ng-repeat="device in group.devices" class="item item-body" >
-                        <div class="dashboard-item-main-column">
-                            <p>Gateway name: {{device.devicename}}</p>
-                            <p>UUID: {{device.deviceid}}</p>
-                        </div>
-                        <input type="radio"
-                                style="float:right; margin-top: 20px; height: 60px;width: 20px;"
-                                ng-model="selectedGateway.deviceid"
-                                value="{{device.deviceid}}">
-                    </div>
-                </div>
                 <button id="addGateway-button55"
                         ng-click="nextToSellectionSensor()"
-                        style="width: 40%;margin: auto; margin-top: 20px"
+                        style="margin: auto; margin-top: 20px"
                         ng-style="{'background-color': green}"
                         class="button button-positive button-block">NEXT</button>
+                <div class="list">
+                  <div ng-repeat="group in devicesGroups" >
+                      <h4>{{group.groupname}}</h4>
+                      <div ng-repeat="device in group.devices" class="card">
+                          <div class="dashboard-item-main-column">
+                              <p>Gateway name: {{device.devicename}}</p>
+                              <p>UUID: {{device.deviceid}}</p>
+                          </div>
+                          <input type="radio"
+                                style="float:right; margin: 20px; height: 30px;width: 20px;"
+                                  ng-model="selectedGateway.deviceid"
+                                  value="{{device.deviceid}}">
+                      </div>
+                  </div>
+                </div>
+
               </div>
             </div>
 
-            <div ng-show="currentStep == 1">
-               <div class="dashboard-container dashboard-border dashboard-round-border">
-                  <h2>Select Sensor</h2>
-                  <div class="item item-body" ng-repeat="sensor in sensors">
-                    <div class="dashboard-item-main-column">
-                        <strong ng-show="sensor.enabled == 0">{{sensor.sensorname}}</strong>
-                        <strong ng-show="sensor.enabled == 1" style="color: green">{{sensor.sensorname}}</strong>
-                        <p>Sensor class: {{sensor.class}}</p>
-                        <p>Port: {{sensor.port}}</p>
-                        <p>UUID: {{sensor.source}}</p>
 
-                    </div>
-                    <input type="radio"
-                            style="float:right; height: 40px;width: 20px;"
-                            ng-model="selectedSensor.id"
-                            value="{{sensor.id}}">
-                    </div>
-                    <div class="row">
+
+            <div ng-show="currentStep == 1">
+               <div class="list">
+                  <h2>Select Sensor</h2>
+                  <div class="row" ng-show="currentStep == 1">
                       <button id="addGateway-button55"
-                              ng-click="backToGatewayStep()"
-                              style="width: 40%;margin: auto; margin-top: 20px"
-                              ng-style="{'background-color': selectedColor}"
-                              class="button button-positive button-block">BACK</button>
+                                ng-click="backToGatewayStep()"
+                                style="width: 40%;margin: auto; margin-top: 20px"
+                                ng-style="{'background-color': selectedColor}"
+                                class="button button-positive button-block">BACK</button>
                       <button id="addGateway-button55"
                               ng-click="nextToChartTypeStep()"
                               style="width: 40%;margin: auto; margin-top: 20px"
                               ng-style="{'background-color': selectedColor}"
+                              ng-show="sensors.length != 0"
                               class="button button-positive button-block">NEXT</button>
-                    </div>
-               </div>
-            </div>
 
+                      <button id="addGateway-button55"
+                              disabled
+                              ng-click="nextToChartTypeStep()"
+                              style="width: 40%;margin: auto; margin-top: 20px"
+                              ng-style="{'background-color': selectedColor}"
+                              ng-show="sensors.length == 0"
+                              class="button button-positive button-block">NEXT</button>
+                  </div>
+                  <div ng-show="sensors.length == 0">
+                    <h3> No sensors </h3>
+                  </div>
+                  <div class="list responsive-sm">
 
-            <div ng-show="currentStep == 2">
-              <div class="dashboard-container dashboard-border dashboard-round-border">
-                  <h2>Type of Chart</h2>
-                  <div class="item item-body" ng-repeat="chartType in chartTypes">
+                    <div class="card" ng-repeat="sensor in sensors">
                       <div class="dashboard-item-main-column">
-                          <strong>{{chartType.name}} chart</strong>
+                          <h4 ng-show="sensor.enabled == 0">{{sensor.sensorname}}</h4>
+                          <h4 ng-show="sensor.enabled == 1" style="color: green">{{sensor.sensorname}}</h4>
+                          <p>Sensor class: {{sensor.class}}</p>
+                          <p>Port: {{sensor.port}}</p>
+                          <p>UUID: {{sensor.source}}</p>
                       </div>
                       <input type="radio"
-                              style="float:right; height: 40px;width: 20px;"
-                              ng-model="selectedChartType.id"
-                              value="{{chartType.id}}">
+                              style="float:right; height: 30px;width: 20px; margin: 30px"
+                              ng-model="selectedSensor.id"
+                              value="{{sensor.id}}">
+                    </div>
                   </div>
+
+                </div>
+
+            </div>
+        <div ng-show="currentStep == 2">
+              <div class="dashboard-container">
+                  <h2>Type of Chart</h2>
                   <div class="row">
                       <button id="addGateway-button55"
                               ng-click="backToSelectionSensorStep()"
@@ -92,12 +102,23 @@
                               ng-style="{'background-color': selectedColor}"
                               class="button button-positive button-block">SAVE</button>
                   </div>
+                  <div  ng-repeat="chartType in chartTypes">
+                      <div class="card" style="padding: 10px;">
+                        <div class="dashboard-item-main-column">
+                          <strong>{{chartType.name}} chart</strong>
+                        </div>
+                        <input type="radio"
+                                style="float:right; height: 40px;width: 20px;"
+                                ng-model="selectedChartType.id"
+                                value="{{chartType.id}}">
+                      </div>
+                  </div>
+
                 </div>
               </div>
             </div>
-
-
           <div/>
+
       </div>
   </ion-content>
 </ion-view>
