New commit code for GatewayUUID

--- a/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
@@ -76,6 +76,8 @@
                           <p>Sensor class: {{sensor.class}}</p>
                           <p>Port: {{sensor.port}}</p>
                           <p>UUID: {{sensor.source}}</p>
+                          <p>Gateway UUID: {{sensor.deviceid}}</p>
+
                       </div>
                       <input type="radio"
                               style="float:right; height: 30px;width: 20px; margin: 30px"
