--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -214,6 +214,7 @@
                           <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
                           <p> Number: #<strong>{{chart.device.number}}</strong></p>
                           <p> LDSU UUID: {{chart.device.source}}</p>
+                          <p> GATWAY UUID: {{chart.device.gatewayUUID}}</p>
                           <p> Sensor class: {{chart.device.sensorClass}}
                           <br></br>
                            <select style="float: left;"
