--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -104,7 +104,7 @@
                     style="margin-top: 30px;">
                 <div class="row">
                   <div class="col col-80" >
-                    <h2>Charts</h2>
+                    <h2><strong>Charts</strong></h2>
                   </div>
                   <div class="col">
                       <div class="row" style="float:right">
